--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,4 @@
-/**
-* Template Name: Append
-* Updated: Feb 01 2024 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# Font & Color Variables
-# Help: https://bootstrapmade.com/color-system/
---------------------------------------------------------------*/
 /* Fonts */
 :root {
   --default-font: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -75,6 +64,19 @@ h6 {
   font-family: var(--heading-font);
 }
 
+.great-vibes-regular {
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+.caveat-h1 {
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
 /*--------------------------------------------------------------
 # Global Header
 --------------------------------------------------------------*/
@@ -88,15 +90,18 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 40px;
+  max-height: 60px;
   margin-right: 6px;
 }
 
 .header .logo h1 {
+  font-family: "Caveat", cursive;
   font-size: 24px;
   margin: 0;
-  font-weight: 600;
+  font-weight: 800;
   color: var(--heading-color);
+  font-style: normal;
+  font-optical-sizing: auto;
 }
 
 .header .logo span {
@@ -485,7 +490,7 @@ section {
 }
 
 .footer .footer-about .logo img {
-  max-height: 40px;
+  max-height: 150px;
   margin-right: 6px;
 }
 
