--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,6 +70,11 @@ h6 {
   font-style: normal;
 }
 
+.ms-madi-regular {
+  font-family: "Ms Madi", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .caveat-h1 {
   font-family: "Caveat", cursive;
@@ -95,7 +100,7 @@ h6 {
 }
 
 .header .logo h1 {
-  font-family: "Caveat", cursive;
+  font-family: "Ms Madi", cursive;
   font-size: 24px;
   margin: 0;
   font-weight: 800;
